text in post new website

--- a/content/posts/sedi2018.md
+++ b/content/posts/sedi2018.md
@@ -1,7 +1,7 @@
 title: Study of the Earth Deep Interior meeting 2018 
 slug: sedi-2018-talk
 tags: conference, 2018
-summary: I'll be at the SEDI meeting 2018 in Edmonton, Canada, in July!  
+summary: I'll be at the SEDI meeting 2018 in Edmonton, Canada, in July.  
 
 I'll be at the SEDI meeting 2018 in Edmonton, Canada, in July! 
 
